--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2>Acerca de Mí</h2>
                 <div class="about-content">
                     <div class="profile-picture">
-                        <img src="c:\Users\jugac\Downloads\WhatsApp Image 2025-09-03 at 15.40.00.jpeg" alt="Tu Foto de Perfil">
+                        <img src="assets/pfp.jpeg"> 
                     </div>
                     <div class="bio">
                          <p>Soy estudiante de Psicología Clínica, con formación como Pastry Chef y Bachiller Técnico en Comercialización y Ventas. Me caracterizo por mi creatividad, disciplina y capacidad de adaptarme a diferentes áreas profesionales. Actualmente me encuentro fortaleciendo mis competencias a través de cursos de liderazgo, idiomas y programación, con el objetivo de desarrollarme como una profesional integral que combine la ciencia, la comunicación y la creatividad.
