--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="project-card">
                         <h3>Portafolio personal</h3>
                         <p>Elaboración de un portafolio web para presentar mi perfil académico, profesional y personal. El proyecto incluye secciones de presentación, habilidades, formación, cursos y emprendimientos, integrando un diseño atractivo con tecnologías básicas de programación.</p>
-                        <a href="enlace-a-tu-proyecto-vals-cakes.html" class="btn">Ver proyecto</a>
+                        <a href=" https://vv4leriaa.github.io/jc-port-val/" class="btn">Ver proyecto</a>
                     </div>
                     <div class="project-card">
                         <h3>App Val's Cakes</h3>
